--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
     font-family: Arial;
     background-color:rgba(143, 178, 201, 0.8);
 }
-#date {
+/* .date {
     padding: 10px;
     width: 210px;
     height: 50px;
@@ -22,9 +22,9 @@
     font-size: 20px;
     font-family: Arial;
     background-color:rgba(143, 178, 201, 0.8);
-}
+} */
 
-#clock {
+/* #clock {
     padding: 10px;
     width: 210px;
     height: 50px;
@@ -34,7 +34,7 @@
     font-size: 20px;
     font-family: Arial;
     background-color:rgba(143, 178, 201, 0.8);
-}
+} */
 
 #calendar-container{
     padding: 10px;
